--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "gravitation <chisong@ucdavis.edu>",
   "license": "MIT",
   "scripts": {
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "graphql-yoga": "^1.18.3",
